--- a/src/App.less
+++ b/src/App.less
@@ -1,73 +1,40 @@
 @import "~antd/dist/antd.less";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
-@import './style.less';
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-size: 1rem;
-    font-family: 'Courgette', 'Noto Serif TC';
-    font-weight: 500;
+.App {
+  text-align: center;
 }
 
-a {
-    color: @black-color;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-p {
-    margin-bottom: 0;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-float infinite 3s ease-in-out;
+  }
 }
 
-/* layout */
-.ant-layout-content {
-    // margin: 24px 16px 0;
-    min-height: 100vh;
-    overflow: initial;
+.App-header {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
 }
 
-.ant-layout-sider {
-    background-color: @white-color;
-    position: fixed;
-    height: 100%;
+.App-link {
+  color: rgb(112, 76, 182);
 }
 
-.ant-layout-sider-trigger {
-    color: black;
-    height: 10vh;
-}
-
-/* menu */
-.ant-menu {
-    text-align: center;
-    height: 100%;
-}
-
-.ant-menu-item a {
-    &:hover {
-        color: @black-color;
-    }
-}
-
-.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-    background-color: @white-color;
-    color: black;
-}
-
-.ant-menu-item-selected a {
-    color: @black-color;
-}
-
-.ant-menu-light .ant-menu-item:hover {
-    color: @black-color;
-    text-decoration: underline;
-}
-
-.ant-menu-inline .ant-menu-item::after {
-    border-right: unset;
-}
-
-.ant-menu-item:active {
-    background-color: unset;
+@keyframes App-logo-float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
