--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -97,7 +97,7 @@
     .imgBlock {
         height: 450px;
 
-        .pythonImage {
+        img {
             width: 100%;
             height: 100%;
             object-fit: cover;
